--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -88,7 +88,7 @@ jobs:
           sudo docker docker rmi ${{ secrets.DOCKER_REPO }}
           sudo docker volume prune -f
           sudo cat ${{ secrets.DOCKER_KEY_PATH }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          suod docker pull ${{ secrets.DOCKER_REPO }}
+          sudo docker pull ${{ secrets.DOCKER_REPO }}
           sudo docker compose -f ${{ secrets.DOCKER_COMPOSE_FILE }} up --build
           sudo docker image prune -f
     
