--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -82,15 +82,15 @@ jobs:
         port: ${{ secrets.EC2_PORT }}
         timeout: 60s
         script: |
-          sudo docker stop $(docker ps -aq)
-          sudo docker network prune -f
-          sudo docker container prune -f
-          sudo docker docker rmi ${{ secrets.DOCKER_REPO }}
-          sudo docker volume prune -f
-          sudo cat ${{ secrets.DOCKER_KEY_PATH }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          sudo docker pull ${{ secrets.DOCKER_REPO }}
-          sudo docker compose -f ${{ secrets.DOCKER_COMPOSE_FILE }} up --build
-          sudo docker image prune -f
+          docker stop $(docker ps -aq)
+          docker network prune -f
+          docker container prune -f
+          docker rmi ${{ secrets.DOCKER_REPO }}
+          docker volume prune -f
+          docker login
+          docker pull ${{ secrets.DOCKER_REPO }}
+          docker compose -f ${{ secrets.DOCKER_COMPOSE_FILE }} up --build
+          docker image prune -f
     
     - name: Remove IP FROM security group
       run: |
