[hotfix] github-actions 워크플로우
- docker compose 명령에 백그라운드 실행 추가
	- '-d', '--detach'

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -89,7 +89,7 @@ jobs:
           docker volume prune -f
           docker login
           docker pull ${{ secrets.DOCKER_REPO }}
-          docker compose -f ${{ secrets.DOCKER_COMPOSE_FILE }} up --build
+          docker compose -f ${{ secrets.DOCKER_COMPOSE_FILE }} up -d --build
           docker image prune -f
     
     - name: Remove IP FROM security group
